--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   <h2>About Me</h2>
   <div class="row align-items-center">
     <div class="col-md-6">
-      <img src="c:\Users\Ambareesh\Downloads\Gemini_Generated_Image_p9uil0p9uil0p9ui.png" alt="Ambareesh Mahasena" class="img-fluid rounded shadow" style="max-height: 400px; object-fit: cover;" />
+      <img src="Photo1.jpg" alt="Ambareesh Mahasena" class="img-fluid rounded shadow" style="max-height: 400px; object-fit: cover;" />
     </div>
     <div class="col-md-6">
       <p class="lead"><h5>I am a Computer Science graduate passionate about coding, problem-solving, and building real-world projects. I enjoy learning new technologies and applying them to solve real challenges. I'm seeking opportunities where I can grow as a developer and contribute to impactful software.</h5></p>
@@ -182,3 +182,4 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
