--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
       <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile" class="text-warning" target="_blank">https://www.linkedin.com/in/abburu-ambareesh-25381328b/</a></p>
       <p>GitHub: <a href="https://github.com/yourusername" class="text-warning" target="_blank">https://github.com/AVAmbareesh</a></p>
       <p>Contact: <a href="contact" class="text-warning" target="_blank">+91 7670884897</a></p>
-      <a href="C:\Syl\Abburu Venkata Ambareesh _resume.pdf" download class="btn btn-resume mt-3">Download Resume</a>
+      <a href="Abburu_Venkata_Ambareesh_Resume_ATS_compressed.pdf" download class="btn btn-resume mt-3">Download Resume</a>
     </div>
   </section>
 
@@ -182,4 +182,5 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
